--- a/index.html
+++ b/index.html
@@ -421,6 +421,7 @@
           <!-- Footer Social Icons -->
           <div class="col-md-4">
             <h4 class="text-uppercase mb-4">Around the Web</h4>
+            
             <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/madeleine.kemeny.9">
               <i class="fab fa-fw fa-facebook-f"></i>
             </a>
@@ -430,6 +431,7 @@
             <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/madeleinekemeny/">
               <i class="fab fa-fw fa-linkedin-in"></i>
             </a>
+            <a href="https://github.com/MadeleineKemeny"><img src="img/GitHub-Mark-Light-64px.png" id="github-mark"></a>
             <a class="btn btn-outline-light btn-social mx-1" href="https://www.pinterest.com/madeleinekemeny/">
               <i class="fab fa-pinterest-p"></i>
             </a>
