--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/madeleinekemeny/">
               <i class="fab fa-fw fa-linkedin-in"></i>
             </a>
-            <a href="https://github.com/MadeleineKemeny"><img src="img/GitHub-Mark-Light-64px.png" id="github-mark"></a>
+            <a href="https://github.com/MadeleineKemeny/portfolio3.0"><img src="img/GitHub-Mark-Light-64px.png" id="github-mark"></a>
             <a class="btn btn-outline-light btn-social mx-1" href="https://www.pinterest.com/madeleinekemeny/">
               <i class="fab fa-pinterest-p"></i>
             </a>
